crates/ink/tests/ui/contract/fail/message-unknown-property.stderr
error: unknown ink! attribute (path)
  --> tests/ui/contract/fail/message-unknown-property.rs:13:15
   |
13 |         #[ink(unknown_marker)]
   |               ^^^^^^^^^^^^^^
